Temporary fix for polling. - fwohci_arcv() has a problem if the number of packets to be processed   is limited. - RELENG_7 and -current already have a same workaround.

Reported by: ikob
PR: kern/85434